...
            completion(result)
        }
    }

    public func detailImage(imageId: String) async -> Result<PicSumDetailDto, APIError> {
        await withCheckedContinuation { continuation in
            detailImage(imageId: imageId) { (result: Result<PicSumDetailDto, APIError>) in
                continuation.resume(returning: result)
            }
        }
    }
}

