...

        collectionView.register(MainImageCollectionViewCell.self,
                                forCellWithReuseIdentifier: MainImageCollectionViewCell.cellReuseIdentifier)
        collectionView.register(EmptyImageCollectionViewCell.self,
                                forCellWithReuseIdentifier: EmptyImageCollectionViewCell.cellReuseIdentifier)

        collectionView.accessibilityIdentifier = "MainViewCollectionView"

        return collectionView
    }()

    private let sectionList: [MyImageListSection] = [.mainImageList, .emptyImageList]

...
